fix for webkit scrollbar issue for windows

--- a/digitalrail/static/digitalrail/attractscreen/css/scss/bigquestion.scss
+++ b/digitalrail/static/digitalrail/attractscreen/css/scss/bigquestion.scss
@@ -65,6 +65,10 @@ body {
   font-weight: 400;
 }
 
+::-webkit-scrollbar{
+  width: 0px;
+}
+
 #screen {
   position: absolute;
   top: 0px;
